--- a/model-training/위도경도_출력.ipynb
+++ b/model-training/위도경도_출력.ipynb
@@ -58,7 +58,7 @@
         "import asyncio\n",
         "\n",
         "# Replace 'YOUR_KAKAO_API_KEY' with your actual Kakao API key\n",
-        "KAKAO_API_KEY = 'YOUR_KAKAO_API_KEY'"
+        "KAKAO_API_KEY = '0f60d96df69fb23a26f61c5cd7783005'"
       ],
       "metadata": {
         "id": "hZJmrXMIl5EA"
