보안상 업데이트

--- a/model-training/위도경도_출력.ipynb
+++ b/model-training/위도경도_출력.ipynb
@@ -1,24 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!pip install aiohttp pandas\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -26,11 +10,10 @@
         "id": "t4VJBPWnlzlr",
         "outputId": "12e59859-fe81-4f1b-cc71-1533229edea5"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: aiohttp in /usr/local/lib/python3.10/dist-packages (3.8.5)\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.10/dist-packages (1.5.3)\n",
@@ -48,26 +31,48 @@
             "Requirement already satisfied: idna>=2.0 in /usr/local/lib/python3.10/dist-packages (from yarl<2.0,>=1.0->aiohttp) (3.4)\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install aiohttp pandas\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hZJmrXMIl5EA"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import aiohttp\n",
         "import asyncio\n",
         "\n",
         "# Replace 'YOUR_KAKAO_API_KEY' with your actual Kakao API key\n",
-        "KAKAO_API_KEY = '0f60d96df69fb23a26f61c5cd7783005'"
-      ],
-      "metadata": {
-        "id": "hZJmrXMIl5EA"
-      },
-      "execution_count": null,
-      "outputs": []
+        "KAKAO_API_KEY = 'YOUR_KAKAO_API_KEY'"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z6AHCzwnmUWP",
+        "outputId": "1ce96b7a-a314-4577-8f0c-d57fd4352487"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Empty DataFrame\n",
+            "Columns: [시군구, 도로명, addr , x_coordinate, y_coordinate]\n",
+            "Index: []\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "async def get_coordinates(session, address):\n",
@@ -114,32 +119,11 @@
         "# Call the main function asynchronously\n",
         "await main()\n",
         "print(missing_coordinates)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Z6AHCzwnmUWP",
-        "outputId": "1ce96b7a-a314-4577-8f0c-d57fd4352487"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Empty DataFrame\n",
-            "Columns: [시군구, 도로명, addr , x_coordinate, y_coordinate]\n",
-            "Index: []\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "data.head()"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -148,19 +132,9 @@
         "id": "I0kXf51orZAl",
         "outputId": "c77a590a-fd94-4852-d2ee-d66130f2278c"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "             시군구      도로명                  addr   x_coordinate  y_coordinate\n",
-              "0  서울특별시 강남구 개포동  개포로 264  서울특별시 강남구 개포동 개포로 264    127.052228      37.47975\n",
-              "1  서울특별시 강남구 개포동  개포로 264  서울특별시 강남구 개포동 개포로 264    127.052228      37.47975\n",
-              "2  서울특별시 강남구 개포동  개포로 264  서울특별시 강남구 개포동 개포로 264    127.052228      37.47975\n",
-              "3  서울특별시 강남구 개포동  개포로 264  서울특별시 강남구 개포동 개포로 264    127.052228      37.47975\n",
-              "4  서울특별시 강남구 개포동  개포로 264  서울특별시 강남구 개포동 개포로 264    127.052228      37.47975"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-787a15b9-b122-4313-bb76-4aeeeab39157\" class=\"colab-df-container\">\n",
@@ -373,15 +347,32 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "             시군구      도로명                  addr   x_coordinate  y_coordinate\n",
+              "0  서울특별시 강남구 개포동  개포로 264  서울특별시 강남구 개포동 개포로 264    127.052228      37.47975\n",
+              "1  서울특별시 강남구 개포동  개포로 264  서울특별시 강남구 개포동 개포로 264    127.052228      37.47975\n",
+              "2  서울특별시 강남구 개포동  개포로 264  서울특별시 강남구 개포동 개포로 264    127.052228      37.47975\n",
+              "3  서울특별시 강남구 개포동  개포로 264  서울특별시 강남구 개포동 개포로 264    127.052228      37.47975\n",
+              "4  서울특별시 강남구 개포동  개포로 264  서울특별시 강남구 개포동 개포로 264    127.052228      37.47975"
             ]
           },
+          "execution_count": 24,
           "metadata": {},
-          "execution_count": 24
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "data.head()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Gt5WAy-vrB8d"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "\n",
@@ -408,12 +399,21 @@
         "data.to_excel(output_excel_path, index=False)\n",
         "\n",
         "print(\"평수 변환이 완료되었습니다.\")\n"
-      ],
-      "metadata": {
-        "id": "Gt5WAy-vrB8d"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
